reports fonksiyonlarını eklemeye başladım.
